# sieve

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
.claude/commands/: sieve-doctor.md  sieve-history.md  sieve-off.md  sieve-on.md  sieve-status.md  sieve-tokens-saved.md
docs/: architecture.md  routing.md  troubleshooting.md
scripts/: install-shim.sh  sieve-statusline.sh  uninstall-shim.sh
sieve/: classifier.py  claude_runner.py  cli.py  config.py  context.py  doctor.py  ledger.py  ollama.py  shim.py  statusline.py  terminal.py  token_counter.py
tests/: test_classifier.py  test_claude_runner.py  test_cli.py  test_config.py  test_context.py  test_ledger.py  test_shim.py  test_statusline.py  test_token_counter.py
