[project]
name = "sieve"
version = "0.1.0"
description = "Terminal-native router for Claude Code — simple prompts go local (Ollama), complex prompts go to real Claude Code."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sieve = "sieve.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sieve"]

[tool.pytest.ini_options]
pythonpath = ["."]
